syntax="proto3";

package protobuf;

message User {
    int32 id = 1;
    string password = 2;
    string email = 3;
}

message CreateUserRequest {
    User user = 1;
}

message CreateUserResponse {
    User user = 1;
}

message FetchUserRequest {
    string email = 1;
}

message FetchUserResponse {
    User user = 1;
}

message DeleteUserRequest {
    string email = 1;
}

message DeleteUserResponse {
    User user = 1;
}

message UpdateUserRequest {
    User user = 1;
}

message UpdateUserResponse {
    User user = 1;
}

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse) {}
    rpc FetchUser (FetchUserRequest) returns (FetchUserResponse) {}
    rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
    rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse) {}
}